manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"pelorus-ui:dev","namespace":"pelorus-api"},"fieldPath":"spec.template.spec.containers[?(@.name==\"pelorus-ui\")].image","paused":"false"}]'
  labels:
    app: pelorus-ui
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: pelorus-ui
    app.kubernetes.io/name: pelorus-ui
    app.kubernetes.io/part-of: pelorus
    app.openshift.io/runtime-namespace: pelorus-api
  name: pelorus-ui
  namespace: pelorus-api
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: pelorus-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pelorus-ui
        deployment: pelorus-ui
        app.kubernetes.io/component: frontend
        app.kubernetes.io/instance: pelorus-ui
        app.kubernetes.io/name: pelorus-ui
        app.kubernetes.io/part-of: pelorus
        app.openshift.io/runtime-namespace: pelorus-api
    spec:
      serviceAccountName: pelorus
      containers:
      - name: pelorus-ui
        command: ["/bin/bash"]
        args: ["-c", "export OPENSHIFT_CLIENT_SECRET=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token); node server.js"]
        image: quay.io/etsauer/pelorus-ui:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
